--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body.login {
+    width: 40%;
+    display: block;
+}
+
 header {
     grid-area: h;
     margin-top: 0.5em;
@@ -41,7 +46,7 @@ nav div.categoria {
     grid-area: p1;
 }
 
-nav a.categoria, nav a.catalogo, nav a.cadastro {
+nav a.categoria, nav a.catalogo, nav a.cadastro, nav a.sessao {
     float:left;
 }
 
@@ -56,6 +61,10 @@ nav a.catalogo {
 
 nav div.cadastro {
     grid-area: p2;
+}
+
+nav div.cadastro a.cadastro {
+    margin-right: 2em;
 }
 
 main {
@@ -73,6 +82,10 @@ main#categorias {
     grid-template-rows: 26.66vh 26.66vh 26.66vh;
     grid-template-columns: 3.33fr 3.33fr 3.33fr;
     grid-template-areas: "cat1 cat2 cat3" "cat4 cat5 cat6" "cat7 cat8 cat9";
+}
+
+main.login {
+    display: block;
 }
 
 main div {
@@ -325,6 +338,14 @@ form label {
 form input {
     display: block;
     width: 60%;
+}
+
+form#login input {
+    margin-bottom: 1.5em;
+}
+
+form#login input[type="submit"] {
+    width: 10%;
 }
 
 form select {
