--- a/estilo.css
+++ b/estilo.css
@@ -48,8 +48,8 @@ header h1:hover {
 nav {
     grid-area: n;
     display: grid;
-    grid-template-columns: 7fr 3fr;
-    grid-template-areas: "p1 p2";
+    grid-template-columns: 3.6fr 3.4fr 3fr;
+    grid-template-areas: "p1 pa p2";
 }
 
 nav a {
@@ -57,6 +57,7 @@ nav a {
     margin-bottom: 1em;
     color: black;
     text-decoration: none;
+    display: block;
 }
 
 nav a:hover {
@@ -67,8 +68,17 @@ nav div.categoria {
     grid-area: p1;
 }
 
+nav div.paginas {
+    grid-area: pa;
+}
+
 nav a.categoria, nav a.catalogo, nav a.cadastro, nav a.sessao {
     float:left;
+}
+
+nav a.paginas {
+    float: left;
+    padding-right: 2em;
 }
 
 nav a.categoria {
@@ -157,7 +167,7 @@ main div.f4 {
     grid-area: f4;
     margin: 0.5em 1em 1em 0;
     border-radius: 0.5em;
-    box-shadow: lightgray 0px 0px 20px 4px;
+    box-shadow: #d3d3d3 0px 0px 20px 4px;
 }
 
 main div.f5 {
@@ -176,21 +186,21 @@ main div.f6 {
 
 main div.f7 {
     grid-area: f7;
-    margin: 0 1em 1em 0;
+    margin: 0 1em 1.5em 0;
     border-radius: 0.5em;
     box-shadow: lightgray 0px 0px 20px 4px;
 }
 
 main div.f8 {
     grid-area: f8;
-    margin: 0 1em 1em 0;
+    margin: 0 1em 1.5em 0;
     border-radius: 0.5em;
     box-shadow: lightgray 0px 0px 20px 4px;
 }
 
 main div.f9 {
     grid-area: f9;
-    margin: 0 0 1em 0;
+    margin: 0 0 1.5em 0;
     border-radius: 0.5em;
     box-shadow: lightgray 0px 0px 20px 4px;
 }
