--- a/estilo.css
+++ b/estilo.css
@@ -128,8 +128,8 @@ main div {
 
 main div.editavel {
     grid-template-rows: 4vh 11vh 7.5vh;
-    grid-template-columns: 5fr 1fr 2fr 2fr;
-    grid-template-areas: "es es ed de" "no no fo fo" "qu da da da";
+    grid-template-columns: 1fr 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr 1fr;
+    grid-template-areas: "es es es es ed ed ed de" "no no no no fo fo fo fo" "qu qu da da da da pr pr";
 }
 
 main div.visualizavel {
